# rollup-starter

./: .gitignore  Cargo.toml  GETTING_STARTED_WITH_CELESTIA.md  GETTING_STARTED_WITH_HYPERLANE.md  Makefile  README_EXTERNAL_MOCK_DA.md  constants.toml
.github/workflows/: reusable-job.yml  rust.yml  soak-test.yml
configs/celestia/: genesis.json  rollup.toml
configs/mock/: genesis.json  rollup.toml
configs/mock_external/: genesis.json  rollup.toml
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/provers/sp1/guest-celestia/: Cargo.toml
crates/provers/sp1/guest-mock/: Cargo.toml
crates/rollup/: Cargo.toml
crates/rollup/src/: da.rs  rollup.rs
crates/rollup/tests/: test_helpers.rs
crates/stf/: Cargo.toml  build.rs
crates/stf/src/: authentication.rs  delegation.rs  lib.rs  runtime.rs
crates/stf/stf-declaration/: Cargo.toml
crates/stf/stf-declaration/src/: lib.rs
examples/privy/src/: types.ts
examples/sb-session-registry/: Cargo.toml  README.md
examples/sb-session-registry/src/: call.rs  error.rs  event.rs  lib.rs  types.rs
examples/sb-session-registry/tests/: test_session_registry.rs
examples/sb-session-registry/tests/common/: mod.rs
examples/starter-js/: package-lock.json  package.json
examples/starter-js/src/: index.ts
examples/starter-js/src/hyperlane/: consts.ts  create-warp-route.ts  set-igp.ts  starter-enroll-rollup-route-on-ethtest.ts  starter-inbound-transfer.ts  starter-outbound-transfer.ts  starter-setup-warp-route.ts  utils.ts
integrations/: Makefile  different_ports.env  docker-compose.celestia.yml
integrations/hyperlane/: .env.example  .gitignore  README.md  config.json  docker-compose.hyp-evm.yml
integrations/hyperlane/configs/: agent-config.json  core-config.yaml  warp-route-deployment.yaml
integrations/hyperlane/configs/chains/ethtest/: metadata.yaml
scripts/acceptance-test/: Cargo.toml  README.md  genesis.json  rollup_config.toml
scripts/acceptance-test/src/: fetch_and_compare.rs  lib.rs  main.rs
scripts/setup/: README.md  add-signer.ts  generate-keys.ts  package-lock.json  package.json  tsconfig.json
scripts/soak-test/: Cargo.toml
scripts/soak-test/src/: main.rs
