[package]
name = "sb-session-registry"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

version = { workspace = true }
readme = "README.md"
publish = false
resolver = "2"

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true }

sov-chain-state = { workspace = true }
sov-bank = { workspace = true }
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
schemars = { workspace = true }
thiserror = "2.0.17"

[dev-dependencies]
sov-address = { workspace = true, features = ["evm"] }
sov-test-utils = { workspace = true }
schemars = { workspace = true }
strum = { workspace = true }

[features]
default = []
arbitrary = [
    "sov-modules-api/arbitrary",
    "sov-state/arbitrary",
    "sov-test-utils/arbitrary",
]
native = [
    "sov-bank/native",
    "sov-modules-api/native",
    "sov-state/native",
    "sov-address/native",
]
