[package]
name = "acceptance-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand = "0.8"
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
stf-starter = { path = "../../crates/stf", features = ["mock_da", "native"] }
sov-bank = { workspace = true, features = ["native"] }
sov-modules-rollup-blueprint = { workspace = true, features = ["native"] }
sov-soak-testing-lib.workspace = true
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls"] }
sov-api-spec.workspace = true
rollup-starter = { path = "../../crates/rollup/", default-features = false, features = ["mock_da", "mock_zkvm"] }
sov-modules-api.workspace = true
borsh.workspace = true
sov-modules-stf-blueprint.workspace = true
serde_json.workspace = true
sov-rollup-interface.workspace = true
base64 = "0.22.1"
tokio-stream = "0.1.17"
futures = "0.3.31"
thiserror = "2.0.14"
serde.workspace = true

[[bin]]
name = "acceptance-test"
path = "src/main.rs"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"
