[workspace]

[package]
name = "guest-mock-starter-sp1"
version = "0.3.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = { version = "1.0.95" }
sp1-zkvm = { version = "5.0.8" }
serde = { version = "1.0.188", features = ["derive", "rc"] }
sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14", features = ["evm"] }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14" }
sov-mock-da = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14" }
sov-modules-stf-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14" }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14" }
sov-sp1-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14" }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14" }
sov-mock-zkvm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14" }
sov-kernels = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14" }
sov-metrics = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "7ade87997fd50099a183648cc4378662a2b0cf14", optional = true }

stf-starter = { path = "../../../stf", default-features = false, features = ["mock_da"] }

[patch.crates-io]
# Commented out branches, but below there are exact revision, this helps with preventing accidental breakages
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", rev = "32cd33136ff22cc977ea6a95dd5a322a1de7283c" }
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.9" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", branch = "patch-curve25519-v4.1.3" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }

[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[features]
bench = ["sov-modules-api/bench", "sov-state/bench", "sov-modules-stf-blueprint/bench", "sov-metrics/sp1", "stf-starter/bench"]
